- Add MySQL tests  - added `selectTriggersForCalendarV2` in `DriverDelegate`  - added `useEnhancedStatements` in `JobStoreSupport`  - Updated `containsColumnNames`  - Extended tests
Signed-off-by: Mark Beznos <mark@mtechnic.me>